# algo-trading

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  log_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  security_best_practices_report.md
.github/workflows/: ci.yml
adapters/: __init__.py  base_adapter.py  binance.py  coinbase.py  kraken.py
algorithms/: __init__.py  base_algorithm.py  quantconnect_adapter.py  sma_crossover.py
backtesting/: __init__.py  engine.py
config/: __init__.py  config.yaml.example  settings.py
data/cache/: .gitkeep
database/: models.py
database/migrations/: env.py
docs/: ADAPTER_SURFACES.md  ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md  OVERVIEW.md  PRODUCTION_READINESS.md  TASKS.md
logging/: log_config.py
notebooks/: 01_strategy_research.py
order_management/: __init__.py  order_manager.py
risk_management/: __init__.py  risk_manager.py
src/: __init__.py  cli.py
src/adapters/: HYPERLIQUID_README.md  __init__.py  auth.py  base_adapter.py  binance.py  bybit.py  exceptions.py  health_monitor.py  hyperliquid.py  lighter.py  normalizer.py  test_hyperliquid.py  testnet.py
src/backtest/: runner.py
src/broker/: __init__.py  alpaca.py  binance.py
src/data/: fetcher.py
src/execution/: engine.py
src/metrics/: __init__.py  alerts.py  collector.py  dashboard.py  exporters.py  integration.py
src/rate_limiter/: __init__.py  coordinator.py  examples.py  http_client.py  integration.py  rate_limiter.py  storage.py  token_bucket.py
src/risk/: manager.py
src/runtime/: __init__.py  database.py  top_level.py
src/strategy/: __init__.py  sma_crossover.py  sma_crossover_risk.py
src/tracing/: __init__.py  context.py  examples.py  generator.py  http.py  logger.py  propagation.py
src/tracing/http/: __init__.py
src/tracing/tests/: test_tracing.py
tests/: __init__.py  conftest.py  test_coinbase_advanced.py  test_strategy.py
tests/integration/: test_backtest.py  test_end_to_end.py
tests/unit/: test_broker.py  test_broker_alpaca.py  test_broker_binance.py  test_cli.py  test_data_fetcher.py  test_execution.py  test_log_config.py  test_logging_config.py  test_order_manager_security.py  test_risk.py  test_runtime_database.py  test_settings.py  test_strategy.py  test_strategy_sma_crossover_risk.py  test_top_level_runtime.py
tests/unit/adapters/: test_integration.py
trading_logging/: __init__.py  log_config.py
